cmake_minimum_required(VERSION 3.13...3.26 FATAL_ERROR)
project(cmake_test CXX)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${PROJECT_SOURCE_DIR}/cmake/external)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_TEST_CXXMODULES "OFF" CACHE BOOL "")
set(CMAKE_TEST_OPENCV "ON" CACHE BOOL "")
set(CMAKE_TEST_CVUI "ON" CACHE BOOL "")
set(CMAKE_TEST_CVPLOT "OFF" CACHE BOOL "")
set(CMAKE_TEST_FLECS "OFF" CACHE BOOL "")
set(CMAKE_TEST_RTTR "ON" CACHE BOOL "")

add_subdirectory(test)