
if(CMAKE_TEST_CXXMODULES)
    add_subdirectory(CXXModules/simple)
    add_subdirectory(CXXModules/library)
    add_subdirectory(CXXModules/duplicate)
endif()

if(CMAKE_TEST_OPENCV)
    add_subdirectory(OpenCV/fetch)
endif()

if(CMAKE_TEST_CVUI)
    add_subdirectory(CVUI/button-shortcut)
    add_subdirectory(CVUI/complext-layout)
    add_subdirectory(CVUI/hello-world)
    add_subdirectory(CVUI/main-app)
    add_subdirectory(CVUI/mouse-complex)
    add_subdirectory(CVUI/mouse-complex-buttons)
    add_subdirectory(CVUI/multiple-files)
    add_subdirectory(CVUI/multiple-windows)
    add_subdirectory(CVUI/multiple-windows-complex-dynamic)
    add_subdirectory(CVUI/nested-rows-columns)
    add_subdirectory(CVUI/ui-enhanced-window-component)
    add_subdirectory(CVUI/trackbar-sparkline)
endif()

if(CMAKE_TEST_CVPLOT)
    add_subdirectory(CvPlot/plot-basic)
endif()